# peregrine

./: .clang-tidy  .clangd-format  CMakeLists.txt  vc140.idb
include/: assignment.h  assignment.hpp  clauses.h  clauses.hpp  dpll.hpp  heuristics.hpp  parser.h  parser.hpp  peregrine.hpp  propagator.hpp  types.h  types.hpp
sat_files/dimacs_cnf/inputs/: simple_hand.cnf  toughsat1.cnf
sat_files/dimacs_cnf/outputs/: simple_hand.out  toughsat1.out  un20.cnf
src/: peregrine.cpp
src/clauses/: assignment.cpp
src/parsers/: parser.cpp
src/propagators/: propagator.cpp
src/solvers/: dpll.cpp
tests/: CMakeLists.txt
tests/unit/: assignment_test.cpp  clause_test.cpp  dpll_test.cpp  propagate_test.cpp
